# ofxstatement-santander-es

./: .gitignore  MANIFEST.in  Pipfile  README.rst  pyproject.toml
.github/workflows/: makefile.yml
src/ofxstatement_santander_es/: plugin.py
tests/: sample-statement.xlsx  test_sample.py
